--- a/client/templates/authenticated/assistant.html
+++ b/client/templates/authenticated/assistant.html
@@ -7,7 +7,7 @@
 <!-- To apply other profiles, we would want to use variables here insted of hardcoded text -->
 
 <h6> 
-    Here is some help to get you started. Based on your profile, we suggest starting the conversation sharing your views on gun contorl. More topics can be found <a href="https://www.procon.org/debate-topics.php" target="_blank"> here.</a>
+    Here is some help to get you started. Based on your profile, we suggest starting the conversation sharing your views on gun control. More topics can be found <a href="https://www.procon.org/debate-topics.php" target="_blank"> here.</a>
 </h6>
     
     
