--- a/client/stylesheets/module/_channel.scss
+++ b/client/stylesheets/module/_channel.scss
@@ -171,8 +171,8 @@ body.is-channel .container {
 
 
 .conversation {
-  left: 250px;
-  width: calc( 100% - 250px );
+//  left: 250px;
+  width: calc( 100%); /* to add back the sidebar, put 100% - 250px back here */
   background: #fff;
   border-top: 1px solid #eee;
 
