change reputation display

--- a/client/templates/authenticated/browse.html
+++ b/client/templates/authenticated/browse.html
@@ -18,7 +18,7 @@
 	      <div class="card-block">	
 	      	<h4 class="card-header">
 	        	{{fullName user.profile.name}}
-	        	<div style="float: right">{{displayInfo user.profile.reputation}} / 10</div>
+	        	<div style="float: right">{{getReputation user.profile.reputation}}</div>
 	      	</h4>
 	      </div>
 	      <ul class="list-group list-group-flush"> 
