updated conversation assistant articles

--- a/client/templates/authenticated/assistant.html
+++ b/client/templates/authenticated/assistant.html
@@ -24,9 +24,9 @@
     <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
       <div class="card-block">
             <ul>
-                <li><a href="https://www.vice.com/en_us/article/gy5ex9/the-leftist-argument-against-gun-control" target="_blank">A left perspective</a></li>
-                <li><a href="https://eaglerising.com/48360/we-can-not-coexist-with-people-who-want-to-kill-us/" target="_blank">Guns used to defent against terrorist</a></li>
-                <li><a href="http://www.dw.com/en/8-facts-about-gun-control-in-the-us/a-40816418" target="_blank">Gun Control FAQ</a></li>
+                <li><a href="https://www.vice.com/en_us/article/gy5ex9/the-leftist-argument-against-gun-control" target="_blank">The Leftist Argument Against Gun Control - VICE News (left-leaning)</a></li>
+                <li><a href="http://www.foxnews.com/opinion/2017/10/04/tammy-bruce-why-gun-control-wont-end-mass-murder.html" target="_blank">Why Gun Control Won't End Mass Murder - Fox News (right-leaning)</a></li>
+                <li><a href="http://www.dw.com/en/8-facts-about-gun-control-in-the-us/a-40816418" target="_blank">Gun Control FAQ - DW</a></li>
                 <li><a href="https://www.allsides.com/allsides-search-results?search_api_views_fulltext=gun%20control&created=3&submit_x=0&submit_y=0" target="_blank">Allsides.com articles from both sides</a></li>
 
             </ul>
